--- a/src/app/dashboard/(auth)/register/page.module.css
+++ b/src/app/dashboard/(auth)/register/page.module.css
@@ -1,3 +1,14 @@
 .container {
-    
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
+.form {
+    width: 300px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
